--- a/index97.html
+++ b/index97.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>example-5-1-1</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<script src="js/jquery-1.5.2.min.js" type="text/javascript"></script>
+		<script src="jquery-3.4.1.min.js" type="text/javascript"></script>
 		<script type="text/javascript">
            $(function() {
 		      $("div:first").data("employee", {
