--- a/index97.html
+++ b/index97.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ru" xml:lang="ru">
 	<head>
-		<title>example-5-1-1</title>
+		<title>Index 97</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<script src="jquery-3.4.1.min.js" type="text/javascript"></script>
-		<script type="text/javascript">
+    	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    	<script src="jquery-3.4.1.min.js" type="text/javascript"></script>
+		<script>
            $(function() {
 		      $("div:first").data("employee", {
 			     name: "Иванов",
